feat: css variables

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,19 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+
+@theme {
+  --color-red-500: hsl(1, 90%, 64%);
+  --color-blue-950: hsl(219, 85%, 26%);
+  --color-white: hsl(0, 100%, 100%);
+  --color-navy-50: hsl(210, 60%, 98%);
+  --color-blue-100: hsl(211, 68%, 94%);
+  --color-navy-100: hsl(205, 33%, 90%);
+  --color-gray-500: hsl(219, 14%, 63%);
+  --color-gray-600: hsl(219, 12%, 42%);
+  --color-navy-950: hsl(224, 21%, 14%);
+
+  --font-jakarta-sans: 'Plus Jakarta Sans', sans-serif;
+
+  --font-weight-medium: 500;
+  --font-weight-bold: 800;
+}
