--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,10 @@
   --font-weight-medium: 500;
   --font-weight-bold: 800;
 }
+
+@layer base {
+  body {
+    font-family: var(--font-jakarta-sans);
+    font-weight: var(--font-weight-medium);
+  }
+}
